--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "chart.js": "^4.3.0",
     "express": "^4.18.2",
-    "ws": "^8.13.0",
-    "react-icons": "^4.10.1"
+    "moment": "^2.29.4",
+    "react-icons": "^4.10.1",
+    "simple-statistics": "^7.8.3",
+    "ws": "^8.13.0"
   }
 }
